# localizer

./: Cargo.toml  README.md  README.md 
examples/: ex1.rs  ex2.rs  lang_set1.toml  tic-tac-toe.rs
src/: constants.rs  enums.rs  funcs.rs  lib.rs  structs.rs  traits.rs
src/enums/: Errors.rs  form.rs  mod.rs  resource.rs  serialize_form.rs  standart.rs
src/error/: mod.rs
src/formatter/: formatter_traits.rs  mod.rs
src/prelude/: funcs.rs  mod.rs  no_std_prelude.rs  std_prelude.rs
src/structs/: formatter.rs  langs_dictionary.rs  localizer.rs  mod.rs  properties.rs  serializer.rs
src/structs/formatter/: container.rs
