[package]
name = "localizer"
version = "0.2.3"
authors = ["Pavel Lazarev"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/PSL9902/localizer.git"
documentation = "https://docs.rs/localizer/0.2.3/localizer/"
homepage = "https://crates.io/crates/localizer"
description = """
Simple library for localization.
"""
keywords = ["localization",]
categories = ["localization", "no-std"]
edition = "2018"


[dependencies]
toml = "0.5.6"
lazy_static = "1.4.0"
serde = "1.0.115"

