[package]
name = "localizer"
version = "0.3.5"
authors = ["Pavel Lazarev"]

license = "MIT"
readme = "README.md"
repository = "https://github.com/PSL9902/localizer.git"
documentation = "https://docs.rs/localizer/"
homepage = "https://crates.io/crates/localizer"
description = """
Simple library for localization.
"""
keywords = ["localization",]
categories = ["localization", "no-std"]
edition = "2018"

[features]
default = ["std", "format"]
format = []
std = ["toml", "serde_json/std", "lazy_static", "serde/std"]
no_std = ["serde/alloc", "serde_json/alloc", "lazy_static/spin_no_std"]


[dependencies]
spin = "0.9.0"
toml = { version = "0.5.6", optional = true, default-features = false }
serde_json = { version = "1.0.64", optional = true, default-features = false }
lazy_static = { version = "1.4.0", optional = true, default-features = false }
serde = { version = "1.0.115", optional = true, default-features = false, features = ["derive"] }

